k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kackdev
spec:
  selector:
    matchLabels:
      app: kackdev
  template:
    metadata:
      labels:
        app: kackdev
    spec:
      containers:
      - name: kackdev
        image: ghcr.io/gabbersepp/kackdev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcrio
