k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kackdev-service
spec:
  selector:
   app: kackdev
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
