k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kackdev-ingress
spec:
  rules:
  - host: kack.dev
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: kackdev-service
              port: 
                number: 80
  - host: www.kack.dev
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: kackdev-service
              port: 
                number: 80
