k8s/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kackdev-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kack.dev
    http:
      paths:
        - path: /idptest
          backend:
            serviceName: kackdev-idp-service
            servicePort: 80
        - path: /
          backend:
            serviceName: kackdev-service
            servicePort: 80
